v1.9.1 - Fix dropdown menu flicker

--- a/src/sass/elements/_dropdown.scss
+++ b/src/sass/elements/_dropdown.scss
@@ -1,3 +1,7 @@
+dropdown-menu:not(.dropdown-wrap) {
+    display: none; // prevent content from showing before directive has loaded
+}
+
 .dropdown-wrap {
     position: relative;
 
